--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,14 @@ jobs:
         with:
           xcode-version: latest-stable
 
+      - name: List Available Simulators
+        run: xcrun simctl list devices available
+
       - name: Build
         run: |
           xcodebuild build \
             -scheme chessMentor \
-            -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' \
+            -destination 'generic/platform=iOS Simulator' \
             -configuration Debug \
             CODE_SIGNING_ALLOWED=NO
 
@@ -31,7 +34,7 @@ jobs:
         run: |
           xcodebuild test \
             -scheme chessMentor \
-            -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' \
+            -destination 'platform=iOS Simulator,name=iPhone 15,OS=18.0' \
             -configuration Debug \
             CODE_SIGNING_ALLOWED=NO
 
