--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,11 @@ jobs:
         with:
           xcode-version: latest-stable
 
-      - name: List Available Simulators
-        run: xcrun simctl list devices available
-
       - name: Build
         run: |
           xcodebuild build \
             -scheme chessMentor \
-            -destination 'generic/platform=iOS Simulator' \
+            -destination 'platform=iOS Simulator,name=iPhone SE (3rd generation),OS=18.6' \
             -configuration Debug \
             CODE_SIGNING_ALLOWED=NO
 
@@ -34,7 +31,7 @@ jobs:
         run: |
           xcodebuild test \
             -scheme chessMentor \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=18.0' \
+            -destination 'platform=iOS Simulator,name=iPhone SE (3rd generation),OS=18.6' \
             -configuration Debug \
             CODE_SIGNING_ALLOWED=NO
 
